more german looking translations

--- a/src/HealthTracker/lang_du.properties
+++ b/src/HealthTracker/lang_du.properties
@@ -1,7 +1,7 @@
-settingsTitle1=ghgh
-settingsTitle2=jh
-opt1=TEXT TO hj
-opt2=hj FONT
-opt3=hj
-opt4=DISABLEhj
-opt5=ghjh UNITS
+settingsTitle1=SPUR
+settingsTitle2=EINSTELLUNGEN
+opt1=TEXT ZU SPRACHE
+opt2=GRÖSSERE SCHRIFT
+opt3=SPRACHE
+opt4=ZIEL BEHINDERN
+opt5=BEVORZUGTE EINHEITEN
